# PARALiA-Framework

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_silver1.txt  CMakeLists_vulcan.txt  Deploy.in  Model_validation.in  Performance_evaluation.in  README.md  config.sh  config_karol.sh  config_silver1.sh  config_vulcan.sh
Autotuner/: CMakeLists.txt
Autotuner/include/: Autotuner.hpp  CoCoPeLiaCoModel.hpp  CoCoPeLiaGPUexec.hpp  CoCoPeLiaModelLvl3.hpp  CoModel.hpp  GPUexec_lookup.hpp  ModelLvl1.hpp  ModelLvl2.hpp  ModelLvl3.hpp  Model_functions.hpp  Subkernel_distributions.hpp  Werkhoven.hpp
Autotuner/src/: Autotuner.cpp  CoCoPeLiaModelLvl1.cpp  CoModel.cpp  GPUexec_lookup.cpp  LinkMap.cpp  ModelLvl1.cpp  ModelLvl2.cpp  ModelLvl3.cpp  Model_functions.cpp  Modeler.cpp  Subkernel_distributions.cpp  TransferLinks.cpp  WerkhovenModel.cpp
Autotuner/testing/: CoCoPeLiaPredictTileTester.cpp
Autotuning_runtime/: CMakeLists.txt
Autotuning_runtime/dungani-install/testing-bin/: CoCoPeLiaPredictTileTester
Autotuning_runtime/include/: Autotuning_runtime.hpp  CoCoPeLiaCoModel.hpp  CoCoPeLiaGPUexec.hpp  CoCoPeLiaModel.hpp  CoCoPeLiaModelLvl1.hpp  CoCoPeLiaModelLvl3.hpp  CoCoPeLiaModelWrap.hpp  Model_functions.hpp  Werkhoven.hpp
Autotuning_runtime/silver1-install/testing-bin/: CoCoPeLiaPredictTileTester
Autotuning_runtime/src/: Autotune_controller.cpp  CoCoPeLiaCoModel.cpp  CoCoPeLiaGPUexec.cpp  CoCoPeLiaLinks.cpp  CoCoPeLiaModel.cpp  CoCoPeLiaModelLvl1.cpp  CoCoPeLiaModelLvl3.cpp  CoCoPeLiaModelWrap.cpp  Distributions.cpp  LinkMap.cpp  Model_functions.cpp  Modeler.cpp  Subkernel_distributions.cpp  TransferLinks.cpp  WerkhovenModel.cpp
Autotuning_runtime/testing/: CoCoPeLiaPredictTileTester.cpp
Benchmarking/: CMakeLists.txt  CMakeLists_vulcan.txt  Full_model_validation.in  Full_performance_evaluation.in  Heterogeneous_performance_estimation.in  Targeted_performance_evaluation.in  Test_correctness.in  Vulcan_heterogeneous_estimation_fire.sh
Benchmarking/CuCuBLAS/include/: BLASxWrapped.hpp  BackenedLibsWrapped.hpp  Testing.hpp  XKBLASWrapped.hpp
Benchmarking/CuCuBLAS/src/: BLASXWrappers.cpp  BLASxDgemmRunner.cpp  BLASxExDgemmRunner.cpp  CoCoPeLiaDaxpyRunner.cpp  CoCoPeLiaDaxpyRunnerBest.cpp  CoCoPeLiaDgemmPredictor.cpp  CoCoPeLiaDgemmRunner.cpp  CoCoPeLiaDgemmRunnerBest.cpp  CoCoPeLiaDgemmRunnerBestest.cpp  CoCoPeLiaDgemmTester.cpp  CoCoPeLiaTestFasTransfer.cpp  CoCoPeLiaTestLinkOverlap.cpp  CoCoPeLiaTestTools.cpp  CoCopeLiaDgemmRunner.cpp  CoCopeLiaDgemmTester.cpp  XKBLASDgemmRunner.cpp  XKBLASWrappers.cpp  cuBLASWrappers.cpp  cuBLASXtDgemmRunner.cpp  cuBLASXtWrappers.cpp  testing.cpp
Benchmarking/Python_Scripts/: PARALia-plot-transfers.ipynb  PARALia-plot-vulcan-clx-ai.ipynb  PARALia-plot-vulcan-clx-ai_hetero.ipynb  Plot-CoCoPeLia-perf-comparisson.ipynb  Plot-EDP-comp-imp.ipynb  Plot-gflops-Distributions.ipynb  Plot-gflops-Modeling.ipynb  Plot-gflops-comp-hops.ipynb  Plot-gflops-comp-imp.ipynb  Plot-gflops-comp-vsXKBLAS.ipynb  Plot-gflops-comp.ipynb  Plot-gflops-implementations.ipynb  Scala_Plotter.ipynb  compare_implementations.ipynb  main_plotter.ipynb
Benchmarking/Python_Scripts/CoCoPeLiA_plotters/: Evaluation_CoCopeLia_plot_all.py  Plot-Transpose-ldim-perf.ipynb  plot_stuff.py
Benchmarking/Python_Scripts/PARALiA_plotters/: PARALia-plot-transfers.ipynb  PARALia-plot-vulcan-clx-ai.ipynb  PARALia-plot-vulcan-clx-ai_hetero.ipynb
Benchmarking/Python_Scripts/Plot_scripts_backup/: Plot-CoCoPeLia-perf-comparisson.ipynb  Plot-full_gflops-comp.ipynb  Plot-gflops-Distributions.ipynb  Plot-gflops-comp-hops.ipynb  Plot-gflops-comp-imp.ipynb  Plot-gflops-comp.ipynb  Tile_selection_perf_MakeTableIVGreatAgain.ipynb
Database_builder/: CMakeLists.txt  ProcessDatabase.in  RunMicrobenchmarks.in
Database_builder/CuCuBLAS/include/: microbenchmarks.hpp
Database_builder/CuCuBLAS/nvidia-energy-measure/: CMakeLists.txt
Database_builder/CuCuBLAS/src/: PARALiA-Framework.code-workspace  daxpy_microbench.cu  ddot_microbench.cu  dgemm_microbench.cu  dgemv_microbench.cu  sgemm_microbench.cu  transfer_link_microbench.cu
Database_builder/Python-DataManage/: BenchToLookupTables.py.in
Deployment_phase/: CMakeLists.txt  Create_Database.sh  ProcessDatabase.in  RunMicrobenchmarks.in  Run_Microbenchmarks.sh
Deployment_phase/CuCuBLAS/include/: microbenchmarks.hpp
Deployment_phase/CuCuBLAS/src/: daxpy_microbench.cu  daxpy_microbench_gpu.cu  dgemm_microbench.cu  dgemm_microbench_cpu.cpp  dgemm_microbench_gpu.cu  sgemm_microbench.cu  sgemm_microbench_gpu.cu  transfer_link_microbench.cpp  transfers_microbench.cu  transfers_microbench_gpu.cu
Deployment_phase/Python-DataManage/: BenchToLookupTables.py  BenchToLookupTables.py.in  LinkPreprocessing.py.in
Deployment_phase/R-statistics/: transfer_models.r  transfer_models.r.in
Library_scheduler/: CMakeLists.txt
Library_scheduler/CuCuBLAS/: Asset_backend.cpp  Autotune_controller_backend.cpp  Decom_backend.cpp  backend_lib_wrappers.hpp  backend_wrappers.cu
Library_scheduler/CuCuBLAS/include/: BLASxWrapped.hpp  CoCoPeLia.hpp  CoCoPeLiaLibBackened.hpp
Library_scheduler/CuCuBLAS/src/: BLAS3Wrappers.cu  Dgemm.cpp  Dgemm.cu  TileScheduler.cpp  TileScheduler.cu  testing.cpp
Library_scheduler/CuCuBLAS/testing/: BLASxDgemmRunner.cpp  BLASxExDgemmRunner.cpp  CoCopeLiaDgemmRunner.cpp  CoCopeLiaDgemmTester.cpp  cuBLASXtDgemmRunner.cpp
Library_scheduler/include/: Asset.hpp  CoCoPeLia.hpp  DataCaching.hpp  Decomposer.hpp  PARALiA.hpp  Subkernel.hpp
Library_scheduler/src/: Asset.cpp  Asset1D.cpp  Asset2D.cpp  Decom1D.cpp  Decom2D.cpp  Subkernel.cpp  Subkernel_backup.cpp  Tile1D.cpp  Tile2D.cpp
Library_scheduler_static/Software_caching/: CMakeLists.txt  README.md
Universal_helpers/: CMakeLists.txt  README.md  unihelpers.pc  unihelpers.pc.in
Universal_helpers/CuCuBLAS/: backend_class_wrappers.cu  backend_data_wrappers.cu  backend_lib_wrappers.cu  backend_routine_wrappers.cu  backend_util_wrappers.cu  backend_wrappers.hpp
Universal_helpers/include/: unihelpers.hpp
Universal_helpers/src/: data_management.cpp  general_utils.cpp
(+155 files in other folders)
